[package]
name = "runtime_manager"
version = "0.1.0"
edition = "2024"

[dependencies]
eventsource-client = "0.17.1"
futures-util = "0.3.32"
launchdarkly-sdk-transport = { version = "0.1.1", features = ["native-tls"] }
rustpython-parser = "0.4.0"
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.51.1", features = ["full"] }
serde_json = "1.0.149"
base64 = "0.22"
reqwest = { version = "0.13.2", features = ["json"] }

[profile.release]
lto = true

[target.x86_64-pc-windows-gnu]
rustflags = ["-C", "target-feature=+crt-static"]